--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ dist/
 web-build/
 expo-env.d.ts
 
+#lockfile
+package-lock.json
+
+
 # Native
 *.orig.*
 *.jks
@@ -36,3 +40,5 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+
+
