improving the UI

--- a/app.json
+++ b/app.json
@@ -17,6 +17,11 @@
         "backgroundColor": "#ffffff"
       }
     },
+    "updates":{
+      "enabled": true,
+      "fallbackToCacheTimeout":0
+    },
+
     "web": {
       "bundler": "metro",
       "output": "static",
